After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 765989 - videodiff element has useless "FIXME" description
videodiff element has useless "FIXME" description
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.9.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-04 14:48 UTC by Georg Lippitsch
Modified: 2016-05-05 09:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Georg Lippitsch 2016-05-04 14:48:58 UTC
"gst-inspect-1.0 videodiff" gives:

Factory Details:
  Rank                     none (0)
  Long-name                FIXME Long name
  Klass                    Generic
  Description              FIXME Description
  Author                   FIXME <fixme@example.com>

And so on. This is in latest git master as well as in stable releases. There should be a useful description on what the element does, and how to use it.
Comment 1 Sebastian Dröge (slomo) 2016-05-05 06:57:47 UTC
It also crashes in a simple "videotestsrc ! videodiff ! glimagesink" pipeline. It seems to take the difference of the current and previous frame, but only the luma... or something like that. The result looks different though.
Comment 2 Tim-Philipp Müller 2016-05-05 09:47:39 UTC
It basically draws a

////
////

style pattern in black and white on areas that changed more than the threshold.


commit b346be1c52a29413332760c691e765d174b74411
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Thu May 5 10:40:37 2016 +0100

    videodiff: fill in FIXME metadata and docs with description
    
    https://bugzilla.gnome.org/show_bug.cgi?id=765989

commit 19d52a4ed5ef12cf1b4e731875cf8b160b0aa029
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Thu May 5 10:41:53 2016 +0100

    videodiff: fix supported formats in template caps