videodiff: fill in FIXME metadata and docs with description

https://bugzilla.gnome.org/show_bug.cgi?id=765989